# mechanized-precision

./: CoqMakefile.conf  Makefile  _CoqProject  absolute_prec.v  error_model.v  lemmas.v  mechanized-precision.opam  ops_absolute_prec.v  relative_prec.v  relative_prec_ops.v
theories/: absolute_prec.v  error_model.v  lemmas.v  relative_error.v  relative_prec.v  relative_prec_ops.v
