opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "host-arch-arm64.1"
  "host-system-other.1"
  "ocaml.4.14.2"
  "ocaml-base-compiler.4.14.2"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
]
roots: [
  "coq.8.20.0"
  "coq-flocq.4.2.1"
  "coq-mathcomp-algebra.2.3.0"
  "coq-mathcomp-algebra-tactics.1.2.4"
  "coq-mathcomp-analysis.1.8.0"
  "coq-mathcomp-reals-stdlib.1.8.0"
  "coq-mathcomp-ssreflect.2.3.0"
  "ocaml-base-compiler.4.14.2"
]
installed: [
  "atd.2.15.0"
  "atdgen.2.15.0"
  "atdgen-runtime.2.15.0"
  "atdts.2.15.0"
  "base.v0.16.3"
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "biniou.1.2.2"
  "camlp-streams.5.0.1"
  "cmdliner.1.3.0"
  "conf-bash.1"
  "conf-g++.1.0"
  "conf-gmp.4"
  "conf-pkg-config.3"
  "coq.8.20.0"
  "coq-core.8.20.0"
  "coq-elpi.2.2.3"
  "coq-flocq.4.2.1"
  "coq-hierarchy-builder.1.8.0"
  "coq-mathcomp-algebra.2.3.0"
  "coq-mathcomp-algebra-tactics.1.2.4"
  "coq-mathcomp-analysis.1.8.0"
  "coq-mathcomp-bigenough.1.0.2"
  "coq-mathcomp-classical.1.8.0"
  "coq-mathcomp-field.2.3.0"
  "coq-mathcomp-fingroup.2.3.0"
  "coq-mathcomp-finmap.2.1.0"
  "coq-mathcomp-reals.1.8.0"
  "coq-mathcomp-reals-stdlib.1.8.0"
  "coq-mathcomp-solvable.2.3.0"
  "coq-mathcomp-ssreflect.2.3.0"
  "coq-mathcomp-zify.1.5.0+2.0+8.16"
  "coq-stdlib.8.20.0"
  "coqide-server.8.20.0"
  "cppo.1.7.0"
  "csexp.1.5.2"
  "dune.3.16.0"
  "dune-configurator.3.16.0"
  "easy-format.1.3.4"
  "elpi.1.19.6"
  "host-arch-arm64.1"
  "host-system-other.1"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "ocaml.4.14.2"
  "ocaml-base-compiler.4.14.2"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
  "ocamlfind.1.9.6"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.3"
  "ppx_optcomp.v0.16.0"
  "ppxlib.0.33.0"
  "re.1.12.0"
  "seq.base"
  "sexplib0.v0.16.0"
  "stdio.v0.16.0"
  "stdlib-shims.0.3.0"
  "yojson.2.2.2"
  "zarith.1.14"
]
